优化结构
