# openapi.yaml
@@ -7,11 +7,11 @@ info:
     description: The greeting service definition.
     version: 0.0.1
 paths:
-    /api/users:
+    /api/register:
         post:
             tags:
                 - Realworld
-            operationId: Realworld_Regitser
+            operationId: Realworld_Register
             requestBody:
                 content:
                     application/json:
@@ -25,6 +25,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/RegisterReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/user_detail:
+        get:
+            tags:
+                - Realworld
+            operationId: Realworld_UserDetail
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UserDetailReply'
                 default:
                     description: Default error response
                     content:
@@ -89,8 +107,6 @@ components:
         RegisterReply:
             type: object
             properties:
-                name:
-                    type: string
                 id:
                     type: string
         RegisterRequest:
@@ -116,5 +132,10 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UserDetailReply:
+            type: object
+            properties:
+                id:
+                    type: string
 tags:
     - name: Realworld
